--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "api_key": "YOUR_API_KEY_HERE",
-    "api_secret": "YOUR_API_SECRET_HERE"
+    "api_key": "gjjkiNKHMxNnrDxYbf",
+    "api_secret": "trUhknEYt1mIsV3sMNxDBFgtKFdxskEXoWeY"
 }
